--- a/templates/index.html
+++ b/templates/index.html
@@ -68,6 +68,7 @@
             border-radius: 8px;
             border: 1px solid #ccc;
             font-size: 16px;
+            background-color: var(--bg);
         }
 
         .button-row {
@@ -133,7 +134,6 @@
             width: 18px;
             height: 18px;
             vertical-align: middle;
-            margin-left: 6px;
         }
 
         /* Make layout adapt on smaller screens */
