--- a/templates/index.html
+++ b/templates/index.html
@@ -166,6 +166,10 @@
      crossorigin="anonymous"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3762364160820960"
      crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3762364160820960"
+     crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3762364160820960"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
