--- a/templates/index.html
+++ b/templates/index.html
@@ -162,14 +162,10 @@
             }
         }
     </style>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3762364160820960"
-     crossorigin="anonymous"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3762364160820960"
-     crossorigin="anonymous"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3762364160820960"
-     crossorigin="anonymous"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3762364160820960"
-     crossorigin="anonymous"></script>
+    <meta name="monetag" content="c7526421caf76d78c644f6bcc0c163a6">
+    <meta name="monetag" content="c7526421caf76d78c644f6bcc0c163a6">
+    <meta name="monetag" content="c7526421caf76d78c644f6bcc0c163a6">
+    <meta name="monetag" content="c7526421caf76d78c644f6bcc0c163a6">
 </head>
 <body>
     <div class="container">
