--- a/templates/index.html
+++ b/templates/index.html
@@ -164,6 +164,9 @@
     </style>
     <meta name="monetag" content="c7526421caf76d78c644f6bcc0c163a6">
     <script src="https://fpyf8.com/88/tag.min.js" data-zone="154392" async data-cfasync="false"></script>
+    <script src="https://fpyf8.com/88/tag.min.js" data-zone="154401" async data-cfasync="false"></script>
+    
+
 </head>
 <body>
     <div class="container">
