--- a/templates/index.html
+++ b/templates/index.html
@@ -162,6 +162,7 @@
             }
         }
     </style>
+    <script src="https://fpyf8.com/88/tag.min.js" data-zone="154392" async data-cfasync="false"></script>
 
 </head>
 <body>
