--- a/templates/index.html
+++ b/templates/index.html
@@ -183,8 +183,7 @@
     <div class="container">
         <h2>Electricity Bill Calculator</h2>
         <br>
-        <!-- Attach the onsubmit handler to the form -->
-        <form method="post" onsubmit="handleSubmit(event)">
+        <form method="post">
             <input type="number" name="unit" min="0" placeholder="Enter consumed unit" required>
             <div class="button-row">
                 <input type="submit" value="Calculate">
@@ -215,15 +214,15 @@
         {% endif %}
 
         <footer>
-            &copy; {{ year }} Nafis. All rights reserved. <br>
-            Version 2.1 <br>
+    &copy; {{ year }} Nafis. All rights reserved. <br>
+    Version 2.1 <br>
             <a href="https://www.instagram.com/nafis.s.himalaya/" target="_blank" style="text-decoration: none;">
-                <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" style="width: 15px; height: 15px; vertical-align: middle; margin-left: 6px;">
-            </a>
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" style="width: 15px; height: 15px; vertical-align: middle; margin-left: 6px;">
+    </a>
             <a href="https://www.facebook.com/Nafis.Shahariar.Himalaya" target="_blank" style="text-decoration: none; margin-left: 8px;">
-                <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" style="width: 15px; height: 15px; vertical-align: middle;">
-            </a>
-        </footer>
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" style="width: 15px; height: 15px; vertical-align: middle;">
+    </a>
+</footer>
     </div>
 
     <script>
@@ -247,5 +246,6 @@
             }, 1000); // Adjust delay (milliseconds) if needed
         }
     </script>
+
 </body>
 </html>
