--- a/templates/index.html
+++ b/templates/index.html
@@ -162,7 +162,7 @@
             }
         }
     </style>
-    <script src="https://fpyf8.com/88/tag.min.js" data-zone="154392" async data-cfasync="false"></script>
+<!--     <script src="https://fpyf8.com/88/tag.min.js" data-zone="154392" async data-cfasync="false"></script> -->
 <!--     <script src="https://fpyf8.com/88/tag.min.js" data-zone="154401" async data-cfasync="false"></script> -->
 
 </head>
